<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical" >

   

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_login_border"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="25sp" >
        </TextView>

        <TextView android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="25dp"
            android:text="@string/login_user_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/edit_login_account"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="25dip"
            android:hint="@string/login_user_name"
            android:paddingLeft="70dip"
            android:background="@drawable/login_edt_account_defaulet" >
        </EditText>

        <TextView android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="15dip"
            android:text="@string/login_password"
            android:textColor="@android:color/black"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:password="true"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="20dip"
            android:hint="@string/login_password"
            android:paddingLeft="70dip"
            android:background="@drawable/login_edt_pwd_defaulet" >
        </EditText>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:background="#f8f3f0"
            android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
              android:layout_marginTop="20dip"
             >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"             
                android:background="@drawable/btn_login_style"
                android:textStyle="bold"
                android:text="登录"
                android:textColor="#ffffff"
                android:textSize="20sp" >
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:layout_centerVertical="true"
                android:layout_marginLeft="130dp"
                android:background="@drawable/login_img_sure_icon" />
          </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>