<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:background="@drawable/bg_intro">

    <LinearLayout
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center"
        >

       

        <LinearLayout
               android:id="@+id/roll_list_item_lilyt"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"  
            android:background="@drawable/bg_roll_list_border"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_roll_top_border"
                    android:gravity="right|center_vertical"
                    android:text="@string/tour_name"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="1dp"
                    android:paddingRight="5dp" >
                </TextView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/roll_line" >
                </View>

                <TextView
                    android:id="@+id/roll_list_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="3dip"
                    android:textColor="#8d8d8d"
                    android:textSize="17sp" >
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/roll_line" >
            </View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@color/roll_item_tv"
                    android:gravity="right|center_vertical"
                    android:paddingRight="5dp"
                  android:text="@string/tour_number"  
                    android:textColor="#000000"
                    android:textSize="17sp" 
                    android:layout_marginLeft="1dp">
                </TextView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/roll_line" >
                </View>

                <TextView
                 android:id="@+id/roll_list_item_number"    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="3dip"
                    android:textColor="#8d8d8d"
                    android:textSize="17sp"
                     >
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/roll_line" >
            </View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_roll_bottom_border"
                    android:gravity="right|center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/tour_from_date"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp" >
                </TextView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/roll_line" >
                </View>

                <TextView
                   android:id="@+id/roll_list_item_formdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="3dip"
                    android:textColor="#8d8d8d"
                    android:textSize="17sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
         <TextView
            android:id="@+id/roll_list_item_down"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:background="@drawable/bg_journey_top"
            android:ems="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tour_down_info"
            android:textColor="@android:color/white"
            android:textSize="18sp" >
        </TextView>
        
    </LinearLayout>

</LinearLayout>