<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
       android:background="@drawable/top_blue_bg"  >

        <ImageButton
            android:id="@+id/activity_call_name_back"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/go_back_style"
              >
        </ImageButton>

        

        <TextView 
              android:id="@+id/activity_call_name_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="点名"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" >

        <LinearLayout
            android:id="@+id/ll_activity_call_name_bottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="#f8f3f0"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/tour_info_count"
                    android:textColor="@color/tab_info_font"
                    android:textSize="18sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_activity_call_name_conunt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="人"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                     android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                     android:layout_marginLeft="15dp"
                    android:text="@string/member_count"
                    android:textColor="@color/tab_info_font"
                    android:textSize="18sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_activity_call_name_member_conunt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                    android:text="人"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                     android:layout_marginLeft="15dp"
                    android:text="@string/member_absent"
                    android:textColor="@color/tab_info_font"
                    android:textSize="18sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_activity_call_name_absent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                    android:text="人"
                    android:textColor="@color/red"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/activity_call_name_finish"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_green_style"
                    android:layout_marginRight="15dp"
                    android:text="完成"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" >
                </Button>
            </LinearLayout>
        </LinearLayout>

        <GridView
            android:id="@+id/gv_activity_call_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_activity_call_name_bottom"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:numColumns="4" >
        </GridView>
    </RelativeLayout>

</LinearLayout>